Adiciona título e botões principais

--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
       </div><!-- /container -->
     </nav><!-- /nav -->
 
+    <div class="cover">
+      <div class="cover-text">
+        <h1>Música para todos</h1>
+        <a href="" class="btn btn-custom btn-purple btn-lg">Aproveite o Spotify Free</a>
+        <a href="" class="btn btn-custom btn-white btn-lg">Obter Spotify Premium</a>
+      </div>
+    </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
