--- a/index.html
+++ b/index.html
@@ -60,6 +60,52 @@
         <a href="" class="btn btn-custom btn-white btn-lg">Obter Spotify Premium</a>
       </div>
     </div>
+
+    <!-- Conteúdo -->
+    <section id="servicos">
+      <div class="container">
+        <div class="row">
+
+          <!-- Álbuns -->
+          <div class="col-md-6">
+            
+            <div class="row albuns">
+              <div class="col-md-6">
+                <img src="img/led-zeppelin.jpg" class="img-responsive">
+              </div>
+              <div class="col-md-6">
+                <img src="img/pink-floyd.jpg" class="img-responsive">
+              </div>
+            </div>
+
+            <div class="row albuns">
+              <div class="col-md-6">
+                <img src="img/queen.jpg" class="img-responsive">
+              </div>
+              <div class="col-md-6">
+                <img src="img/black-sabbath.jpg" class="img-responsive">
+              </div>
+            </div>
+
+          </div>
+
+          <!-- Serviços -->
+          <div class="col-md-6">
+            <h2>O que o Spotify tem?</h2>
+            <h3>Músicas</h3>
+            <p>O Spotify tem milhões de músicas. Escute seus sons favoritos, descubra novas músicas e reúna seus favoritos em um só lugar.</p>
+            <h3>Playlists</h3>
+            <p>No Spotify você encontra uma playlist para cada momento. Todas feitas por fanáticos e especialistas da música.</p>
+            <h3>Novos lançamentos</h3>
+            <p>Escute os novos lançamentos de singles e álbuns da semana e veja o que está bombando no Top 50.</p>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <!-- Rodapé -->
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
