--- a/index.html
+++ b/index.html
@@ -103,6 +103,34 @@
         </div>
       </div>
     </section>
+    <!-- Recursos -->
+    <section id="recursos">
+      <div class="container">
+        <div class="row">
+          <!-- Textos -->
+          <div class="col-md-4">
+            <h2>Fácil</h2>
+            <h3>Buscar</h3>
+            <p>Já sabe o que quer escutar? É só procurar e apertar o play.</p>
+            <h3>Navegar</h3>
+            <p>Veja os novos lançamentos, o que está bombando nas paradas e as melhores playlists para o seu momento.</p>
+            <h3>Descobrir</h3>
+            <p>Curta músicas novas toda segunda-feira com uma playlist personalizada pra você. Ou relaxe e curta uma das rádios.</p>
+          </div>
+          <!-- Imagens -->
+          <div class="col-md-8">
+            <div class="row rotacionar-iphones">
+              <div class="col-md-6">
+                <img src="img/iphone1.png" class="img-responsive">
+              </div>
+              <div class="col-md-6">
+                <img src="img/iphone2.png" class="img-responsive">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Rodapé -->
 
