Altera parte do CSS e HTML para dispositivos móveis

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <p>Curta músicas novas toda segunda-feira com uma playlist personalizada pra você. Ou relaxe e curta uma das rádios.</p>
           </div>
           <!-- Imagens -->
-          <div class="col-md-8">
+          <div class="col-md-8 hidden-xs">
             <div class="row rotacionar-iphones">
               <div class="col-md-6">
                 <img src="img/iphone1.png" class="img-responsive">
